--- a/app/views/advisors/create.html.erb
+++ b/app/views/advisors/create.html.erb
@@ -3,18 +3,17 @@
 <div class="parentLanding">
     <div class="childLanding">
         <br>
-        <br>   
-        <%= render 'signups/whiteASLogo' %>
+        <br> 
         <br>
         <br>
-        <br>
+        <br>  
         <br>
         <br>
         <h1 class="text-center">Thank you! 
         <br>
         <br>
-        <h4>With AdviceShare you'll join a strong community of people who have found a better, easier way to help others.</h4><br><br>
-        <h3> Please help us spread the word by clicking below!</h3>
+        <h4>With AdviceShare you'll join a strong community of people who have found a better, easier way to help others follow in their footsteps!</h4><br><br>
+        <h3>Please help us spread the word by clicking below! Every share truly helps :-)</h3>
         <br>  
         </h1>
 
