--- a/app/views/blogposts/blogPostHomePageTemplate.html.erb
+++ b/app/views/blogposts/blogPostHomePageTemplate.html.erb
@@ -3,7 +3,7 @@
 <!--Put picture for post here -->
 <br>
 <div class="row">
-   <a href="http://AdviceShare.co/blog/advice-to-land-highly-coveted-professional-and-academic-opportunities"><img class="blogpostimage" src="https://s3.amazonaws.com/AdviceShare/AdviceShare+Logos/AdviceShare-big-green.png" /></a>
+  <a href="" title="Adviceshare blog" alt="Life Hacks to staying productive during the holiday season"><img class="mainBlogpostImage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/For+evans+only.jpg"  /></a>
 </div>
 
 <!--Put Blog post title here-->
@@ -13,7 +13,7 @@
   </div>
 
   <div class="span6">
-    <h1 class="text-center"><%= link_to "How we landed highly coveted opportunities", "http://www.AdviceShare.co/blog/advice-to-land-highly-coveted-professional-and-academic-opportunities", class: 'NoUnderlineForLink' %></h1>
+    <h1 class="text-center"><%= link_to "7 Life Hacks to stay productive during the holiday season", "http://www.AdviceShare.co/blog/Life-Hacks-for-Holiday-Season-Productivity", class: 'NoUnderlineForLink' %></h1>
   </div>
 
   <div class="span3">
@@ -21,6 +21,31 @@
 
 </div>
 
+<!--Author bio here-->
+
+<div class="row-fluid">
+  <div class="clearfix content-heading explainergraphicsAuthor">  
+  
+  <div class="span4">
+  </div>
+
+  <div class="span4">
+    <div class="clearfix content-heading" style="margin-left: 40px;">  
+          <div class="clearfix content-heading explainergraphicsAuthor">  
+          <img class="pull-left explainergraphicsAuthor" src="https://s3.amazonaws.com/AdviceShare/AS_Favicons/AS_Favicon.png"/>
+          <h4 class="text-left blogAuthorName" style="margin-left: 50px;">
+            <a class="" href="">by The AdviceShare team</a> 
+          </h4>
+        </div>
+  
+    </div>
+  </div>
+  
+  <div class="span4">
+  </div>
+  
+  </div>
+</div>
 
 <!--Put Preview Content Here-->
 <div class="row">
@@ -30,7 +55,7 @@
 
 
   <div class="span8">
-    <h1 class="text-center postPreviewContent">HLorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</h1>
+    <h1 class="text-center postPreviewContent">While the holiday season is meant to be enjoyed, it also presents a great opportunity to be productive. Here are a few life hacks that will help...</h1>
   </div>
 
 
@@ -48,5 +73,6 @@
  <br>
  <br>
 <br>
- <%= render 'blogsignups/blogShareSignupsComments' %>
+</div>
+</div>
 
