--- a/app/views/blogposts/index.html.erb
+++ b/app/views/blogposts/index.html.erb
@@ -1,37 +1,25 @@
-<% provide(:title, 'Insights on how we landed the following professional and academic opportunities.') %>
-
-<% content_for :for_socialmedia do %>
-  <!--<meta http-equiv="refresh" content="0; url=http://www.adviceshare.co/blog/highly-coveted-professional-and-academic-positions">-->
-  <!--Facebook-->
-  <meta property="og:description" content="Blog | Insights on how we landed the following professional and academic opportunities." />
-<% end %>
-
+<% provide(:title, 'Everything we learned to secure highly coveted opportunities.') %>
 
 <!--Put picture for post here -->
 <br>
 <div class="row">
-  <a href="" title="Adviceshare blog" alt="Grad School-Internships-Full Time Jobs-Life Skills"><img class="blogpostimage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Landing+Professional+and+Academic+Positions.jpg" /></a>
+  <a href="" title="Adviceshare blog" alt="Life Hacks to staying productive during the holiday season"><img class="mainBlogpostImage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/For+evans+only.jpg"  /></a>
 </div>
 
 <!--Put Blog post title here-->
-<div class="container-fluid">
-  <div class="row-fluid">
-    
-    <div class="span1">
-    </div>
-
-    <div class="span10">
-      <h1 class="text-center"><%= link_to "How we landed the following professional and academic opportunities", "http://www.AdviceShare.co/blog/highly-coveted-professional-and-academic-positions", class: 'NoUnderlineForLink' %></h1>
-      <br>
-    </div>
-
-    <div class="span1">
-    </div>
-
+<div class="row">
+  
+  <div class="span3">
   </div>
- </div> 
 
+  <div class="span6">
+    <h1 class="text-center"><%= link_to "7 Life Hacks to stay productive during the holiday season", "http://www.AdviceShare.co/blog/Life-Hacks-for-Holiday-Season-Productivity", class: 'NoUnderlineForLink' %></h1>
+  </div>
 
+  <div class="span3">
+  </div>
+
+</div>
 
 <!--Author bio here-->
 
@@ -44,9 +32,9 @@
   <div class="span4">
     <div class="clearfix content-heading" style="margin-left: 40px;">  
           <div class="clearfix content-heading explainergraphicsAuthor">  
-          <img class="pull-left explainergraphicsAuthor" src="https://s3.amazonaws.com/AdviceShare/AdviceShare+Logos/AdviceShare+favicon.png"/>
+          <img class="pull-left explainergraphicsAuthor" src="https://s3.amazonaws.com/AdviceShare/AS_Favicons/AS_Favicon.png"/>
           <h4 class="text-left blogAuthorName" style="margin-left: 50px;">
-            <a class="" href="http://www.AdviceShare.co/blog/#author">by The AdviceShare team</a> 
+            <a class="" href="">by The AdviceShare team</a> 
           </h4>
         </div>
   
@@ -67,112 +55,24 @@
 
 
   <div class="span8">
-    <h1 class="text-center postPreviewContent">We're sharing the strategies, challenges, and mistakes we learned in landing the following types of highly coveted positions.</h1>
-    
-    <hr>
-
-    <h5 class="blogPostText" style="font-style: italic;">This is the opening post of our new series: Landing Professional and Academic Opportunities.<h5>
-    <br>
-    <h5 class="blogPostText">"I'm really interested in doing XYZ, and would love to hear the advice of someone who has already done it successfully."
-    <br><br>
-    We've had this thought plenty of times, which sparked a sprint to launch the series you’re reading right now.
-    <br><br>
-    We want to share our strategies, mistakes and challenges of successfully securing various professional and academic opportunities. We'll be curating posts from our team at <a class="NoUnderlineForAuthorLinks" href="http://www.adviceshare.co" target="_blank">AdviceShare</a> and fellow bloggers.
-    <br><br>
-    Here's a quick overview of what we'll be writing about in our series. If you want to be notified when a post goes live just sign up below!<h5>
-    <br>
-
-       <h4 class="tab">Grad School</h4>
-       <ul class="extraTab">
-        <li class="blogPostText">Here’s exactly what I did to get into Columbia Law School.</li>
-        <li class="blogPostText">Applying to Business School: Insights from a first year student at Harvard.</li>
-        <li class="blogPostText">3 Things I Wish I Did During College That Would Have Made Applying to Grad School Easier.</li>
-        <li class="blogPostText">Getting Into MFA Programs Are Tough. Here is How I got into the Actors Studio Drama School Two Months Before Classes Started.</li>
-        <!--<li><%= link_to "Applying to Business School: Insights from a first year student at Harvard.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>-->
-      </ul>
-      <br>
-
-      <h4 class="tab">Internships</h4>
-
-      <ul class="extraTab">
-        <li class="blogPostText">In Pursuit of the Dream: How I Landed a Position as A White House Intern.</li>
-        <li class="blogPostText">Landing an Opportunity at Google; Insights from a Former Intern and Full-Time Employee.</li>
-        <li class="blogPostText">Standing Out in a Crowd: How to Get an Internship on Wall Street.</li>
-        <li class="blogPostText">Graduating from your Internship: Getting the Full-Time Offer.</li>
-      </ul>
-      <br>
-
-      <h4 class="tab">Full-time Jobs</h4>
-
-      <ul class="extraTab">
-        <li class="blogPostText">Transitioning from Finance to Tech, Here's How I Did it.</li>
-        <li class="blogPostText">How I Got a Job on Wall Street Even Though I Knew Nothing about Finance.</li>
-        <li class="blogPostText">Against The Odds: Advice on Breaking into the Sports World.</li>
-        <li class="blogPostText">Navigating the Case Interview to break into Management Consulting.</li>
-      </ul>
-      <br>
-
-      <h4 class="tab">Life Skills</h4>
-
-      <ul class="extraTab">
-        <li class="blogPostText">The Art & Science of Networking.</li>
-        <li class="blogPostText">4 Interview Techniques that May Surprise You.</li>
-        <li class="blogPostText">Getting a Letter of Recommendation from Someone Who Doesn't Remember You.</li>
-        <li class="blogPostText">5 Things The Real World Has Taught Me Since I Graduated 3 Years Ago.</li>
-      </ul>
-      <br>
+    <h1 class="text-center postPreviewContent">While the holiday season is meant to be enjoyed, it also presents a great opportunity to be productive. Here are a few life hacks that will help...</h1>
+  </div>
 
 
-
-    <h5 class="blogPostText">Have suggestions for additional posts in the series? Want to share your own experience? Just let us know in the comments below or
-    <a class="NoUnderlineForBlogLinks" href="mailto:general@AdviceShare.co">email us!</a> 
-    <br>
-    <br>
-    Thank you for the support! Please share by clicking below if its not too much trouble :)
-    </h5>
-    <br>
+  <!--    HLorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia. Nam pretium turpis et arcu. Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Praesent adipiscing. Phasellus ullamcorper ipsum rutrum nunc. Nunc nonummy metus. Vestibulum volutpat pretium libero. Cras id dui. Aenean ut eros et nisl sagittis vestibulum. Nullam nulla eros, ultricies sit amet, nonummy id, imperdiet feugiat, pede. Sed lectus. Donec mollis hendrerit risus. Phasellus nec sem in justo pellentesque facilisis. Etiam imperdiet imperdiet orci. Nunc nec neque. Phasellus leo dolor, tempus non, auctor et, hendrerit quis, nisi. Curabitur ligula sapien, tincidunt non, euismod vitae, posuere imperdiet, leo. Maecenas malesuada. Praesent congue erat at massa. Sed cursus turpis vitae tortor. Donec posuere vulputate arcu. Phasellus accumsan cursus velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed aliquam, nisi quis porttitor congue, elit erat euismod orci, ac placerat dolor lectus quis orci. Phasellus consectetuer vestibulum elit. Aenean tellus metus, bibendum sed, posuere ac, mattis non, nunc. Vestibulum fringilla pede sit amet augue. In turpis. Pellentesque posuere. Praesent turpis. Aenean posuere, tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus. Donec elit libero, sodales nec, volutpat a, suscipit non, turpis. Nullam sagittis. Suspendisse pulvinar, augue ac venenatis condimentum, sem libero volutpat nibh, nec pellentesque velit pede quis nunc. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce id purus. Ut varius tincidunt libero. Phasellus dolor. Maecenas vestibulum mollis
+  </div>-->
 
   <div class="span2">
   </div>
 
 </div>
 
+
+
+ <%= render 'blogsignups/postsToDate' %>
  <br>
  <br>
 <br>
-
-
- <%= render 'blogsignups/blogShareSignups' %>
-
- <!--Author detailed bio here-->
-<div class="row-fluid">
-  <div class="clearfix content-heading explainergraphics">  
-  
-  <div class="span2">
-  </div>
-
-  <div class="span8" id="author">
-    <div class="clearfix content-heading">  
-          <div class="clearfix content-heading explainergraphics">  
-          <img class="pull-left pushpicturedown withrightmargin" src="https://s3.amazonaws.com/AdviceShare/AdviceShare+Logos/AdviceShare+favicon.png"/>
-          <h4 class="text-left blogPostText" style="margin-left: 40px;">
-            <b style="line-height: 130%;">About the author</b>
-          <h4 class="text-left blogPostText" style="margin-left: 40px;">
-            The AdviceShare team consists of people who want to help make it easier for you to land great opportunities by sharing their personal experiences. 
-          </h4>
-          <h4 class="text-left blogPostText" style="margin-left: 40px;">
-            All posts are curated by Malcolm Evans, Founder of AdviceShare (an easier way to give and receive advice). <a class="NoUnderlineForAuthorLinks" href="mailto:malcolm@AdviceShare.co" target="_blank">Reach out to him</a> or <a class="NoUnderlineForAuthorLinks" href="http://www.Twitter.com/malcolm_evans" target="_blank">follow him on Twitter</a>. 
-          </h4>
-        </div>
-  
-    </div>
-  </div>
-  
-  <div class="span2">
-  </div>
-  
-  </div>
 </div>
-
- <%= render 'blogsignups/blogComments' %>
+</div>
 
