--- a/app/views/blogsignups/new.html.erb
+++ b/app/views/blogsignups/new.html.erb
@@ -79,7 +79,7 @@
     <br><br>
     We want to share our strategies, mistakes and challenges of successfully securing various professional and academic opportunities. We'll be curating posts from our team at <a class="NoUnderlineForAuthorLinks" href="http://www.adviceshare.co" target="_blank">AdviceShare</a> and fellow bloggers.
     <br><br>
-    Here's a quick overview of what we'll be writing about in our series. If you want to be notified when a post goes live just sign up below!<h5>
+    Here's a quick overview of the types of things that we'll be writing about in our series. If you want to be notified when a post goes live just sign up below!<h5>
     <br>
 
        <h4 class="tab">Grad School</h4>
