--- a/app/views/layouts/_blogheader.html.erb
+++ b/app/views/layouts/_blogheader.html.erb
@@ -5,10 +5,11 @@
   <div class="navbar-inner">
   	<div class="blogheader">
     <div class="container-fluid">
-      <%= link_to image_tag("https://s3.amazonaws.com/AdviceShare/AS+Favicon+w%3A+Full+Text.png"), blog_path, :id => "logo", :class =>"positionAS" %>
+      <%= link_to image_tag("https://s3.amazonaws.com/AdviceShare/AS_Favicons/AS+Favicon+w%3A+Full+Text.png"), blog_path, :id => "logo", :class =>"positionAS" %>
       <ul class="nav pull-right">
-			<%= link_to "What is AdviceShare?", root_path, class: 'headerlinks, pull-right' %>
+			<%= link_to "What is AdviceShare?", root_path, class: 'headerlinks, pull-right', style:'margin-top: 16px;' %>
 			</ul>
   </div>
   </div>
+</div>
 </header>      	
