--- a/app/views/signups/_becomeadviser.html.erb
+++ b/app/views/signups/_becomeadviser.html.erb
@@ -1,1 +1,1 @@
-<%= link_to "Interested in sharing advice? Become an adviser!", new_advisor_path, class: 'headerlinks' %>
+<%= link_to "Want to share advice? Become an adviser!", new_advisor_path, class: 'adviserLinks' %>
