--- a/app/views/signups/create.html.erb
+++ b/app/views/signups/create.html.erb
@@ -3,18 +3,17 @@
 <div class="parentLanding">
     <div class="childLanding">
         <br>
-        <br>   
-        <%= render 'signups/whiteASLogo' %>
+        <br> 
         <br>
         <br>
-        <br>
+        <br>  
         <br>
         <br>
         <h1 class="text-center">Thank you! 
         <br>
         <br>
         <br>
-        <h3>We'll email you when access becomes available! <br> Please share on Facebook and Twitter!</h3>
+        <h3>We'll email you when access becomes available! <br>Please help us spread the word by clicking below! Every share truly helps :-)</h3>
         <br>
         <br>
         <br>   
