--- a/app/views/static_pages/extraviewcode.html.erb
+++ b/app/views/static_pages/extraviewcode.html.erb
@@ -91,4 +91,19 @@
         <small>© 2013 AdviceShare. All rights reserved.</small>
   </div>
 </div>
+<!-- extra for landing page -->
 
+<div class="media">
+            <a class="pull-left" href="#">
+              <img class="media-object" src="https://s3.amazonaws.com/AdviceShare/Landing+Page+Images/Green/AS(1).png">
+            </a>
+            <div class="media-body">
+              <h4 class="media-heading">Make a profile.</h4>
+              Create a profile and tell us what type of advice you're looking for.
+           
+              <!-- Nested media object -->
+              <div class="media">
+                ...
+              </div>
+            </div>
+          </div> 
