--- a/app/assets/stylesheets/signups.css.scss
+++ b/app/assets/stylesheets/signups.css.scss
@@ -1,11 +1,419 @@
-// Place all the styles related to the signups controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-body, h1, h2, h3, h4, h5, h6, small {
-  font-family: Lucida, "Lucida Sans Unicode", "Lucida Grande", Lucida, serif;
-color: white;
+@import "bootstrap";
+
+@import "bootstrap-responsive";
+@import url(http://fonts.googleapis.com/css?family=Varela+Round);
+ * h1, h2, h3, h4, h5, h6 {
+    font-family: 'Varela Round', sans-serif;
+    font-weight: 400;
+}
+h1, h2, h3, h4, h5, h6 {
 }
 
-.changesmallfont{
-color: white;
+
+/* mixins, variables, etc. */
+
+$grayMediumLight: #eaeaea;
+
+@mixin box_sizing {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+
+@media (max-width: 979px) {
+    .container {
+      padding:0;
+      margin:0;
+    }
+
+    body {
+      padding:0;
+    }
+
+    .navbar-fixed-top, .navbar-fixed-bottom, .navbar-static-top {
+      margin-left: 0;
+      margin-right: 0;
+      margin-bottom: -20px;
+    }
+}
+/* universal */
+
+html,body {
+  width: auto !important;
+  overflow-x: hidden !important;
+}
+
+/* Custom container */
+.container-full {
+  margin: 0 auto;
+  width: 100%;
+}
+
+.howItWorksIcons{
+  #color: #F0F0F0;
+  color: #61B329;
+}
+
+.middleSectionOfLandingPage{
+  background-image: url('https://s3.amazonaws.com/AdviceShare/Landing+Page+Images/background_v1.JPG');
+   /* background-image: url('http://unsplash.s3.amazonaws.com/batch%204/jet-sky.jpg'); */
+  background-size: cover;
+  }
+
+.howItWorksSection{
+  background-color: #61B329;
+}
+
+.adviserText{
+  font-weight: 900;
+}
+
+.formBackground{
+  background-color: #FAFAFF !important;
+  border-radius:3px !important;
+  box-shadow: inset 0px 0px 3px 1px #d3d3d3, 0px 0px 4px 1px #d3d3d3 !important;
+  border:7px solid white !important;
+}
+/* typography */
+
+#wrapper {
+  margin: 0 auto;
+  padding: 0;
+}
+
+#portfolio-element {
+  display:        block;
+  margin:         auto;
+  height:         160px;
+  width:          160px;
+  -moz-border-radius:   80px;
+  -webkit-border-radius:  80px;
+  border-radius:      80px; /* future proofing */
+  -khtml-border-radius:   80px; /* for old Konqueror browsers */
+  -moz-box-shadow:      0 0 6px #000000;
+    -webkit-box-shadow:   0 0 6px #000000;
+    box-shadow:           0 0 6px #000000;
+}
+
+.navbarText {
+  text-decoration: none !important;
+  font-size: 16px; 
+  color: #000 !important;
+  font-weight: 200 !important;
+  line-height:150%;
+  margin-top: 8px;
+  margin-right: 20px;
+}
+
+#portfolio-links {
+  display: block;
+  margin: 0 auto;
+  float: none;
+}
+.center {
+  float: none;
+  margin: 0 auto;
+  text-align: center;
+}
+
+/* For blog */
+
+.navbar-inner .blogheader {
+  background-color: #fff;
+  background-image: none;
+  min-height: 40px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 15px;
+}
+
+/* header */
+.blogPostText {
+  text-decoration: none !important;
+  font-size: 16px; 
+  color: #fff !important;
+  font-weight: 100 !important;
+  line-height:150%
+}
+.footerIcons{
+  color: #4F4F4F;
+}
+.headerlinks{
+  color: #000 !important; 
+  font-size: 14px;
+}
+
+.adviserLinks{
+  color: #000 !important; 
+  font-size: 14px;
+}
+
+#logo {
+  float: left;
+  margin-top: -25px;
+  width: 250px;
+  margin-bottom: -50px;
+  margin-left: 17px;
+}
+
+.navbar-inner {
+  #background-color: #61B329;
+  background-color: #fff;
+  background-image: none;
+  min-height: 40px;
+  padding-left: 20px;
+  padding-right: px;
+  padding-bottom: 15px;
+  margin-bottom: 20px;
+}
+
+#nav.affix {
+    position: fixed;
+    top: 0;
+    width: 100%
+}
+
+.navbar .navbar-inner .nav.pull-right {
+    margin-top: 32px; 
+}
+
+.headerlinks{
+  color: #000 !important; 
+  font-size: 14px;
+}
+
+/* Landing Page */
+
+.btn.btn-large.btn-primary{
+  background-color: #61B329;
+  background-image: none;
+  margin-left: px;
+  padding: 5px 5px;
+  font-size: 22px;
+    line-height: normal;
+    -webkit-border-radius: 8px;
+       -moz-border-radius: 8px;
+            border-radius: 8px;
+}
+
+  /* Landing Page - for AdviceShare Logo */
+
+      .parentLanding {
+          display:table;
+          height: 100px;
+          width:100%;
+          margin-top: -20px;
+      }
+
+      .buttonLanding {
+          display:table;
+          height: 100px;
+          width:100%;
+      }
+
+      .childLanding {
+          display:table-cell;
+          vertical-align:middle;
+          text-align:center;
+      }
+
+      .childLanding img {
+          width:45%;
+      }
+
+      .withrightmargin{
+        margin-right: 20px;
+      }
+
+      .moveleft{
+        margin-left: -20px;
+      }
+
+      IMG.signupPageimage {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: -80px;
+        margin-bottom: -150px;
+        width: 40%; 
+      }
+
+  /* Landing Page - for How it works & Signup box */
+
+      .signupparent {
+          display:table;
+          height:250px;
+          width: 100%;
+      }
+
+      .signupparentchild {
+          display:table-cell;
+          vertical-align:middle;
+          text-align:center;
+      }
+
+      .signupparentchild img {
+          width:200px;
+      }
+
+      .explainergraphics img {
+            width:12%;
+            height: 50px;
+            margin-top: px;
+        }
+       .smallpictures{
+        margin-top: -3px;
+       }
+       .getridofspaceatbottom {
+          margin-bottom: px;
+      } 
+
+        .pushpicturedown {
+          margin-top: -5px;
+        }
+
+        .pushpicturedownmore {
+          margin-top: 17px;
+        }
+
+        .space2and3{
+          margin-bottom: 13px;
+        }
+
+/* Social media */
+
+
+.socialmedia img {
+          width:4%;
+      }
+
+
+/* Pricing Page */
+.pricingparent {
+    display:table;
+    border:2px solid gray;
+    height: 300px;
+    width:100%;
+}
+
+.pricingbuttons {
+    display:table;
+    border:2px solid gray;
+    height: 200px;
+    width:100%;
+}
+
+.pricingchild {
+    display:table-cell;
+    vertical-align:middle;
+    text-align:center;
+}
+
+.pricingchild img {
+    border:2px solid red;
+    width:80%;
+}
+
+
+/* Mentor Signup */
+
+.spacecolumns {
+  margin-left: 20px;
+}
+
+.withleftmargin {
+  margin-left: 50px;
+}
+
+
+/* AdviceAreas */
+
+.AdviceAreascontainer{
+  padding-left: 150px;
+}
+
+
+/* AdviceSections */
+
+.AdviceAreasSections{
+  list-style: block;
+}
+
+
+/* How it works */
+
+.parent {
+    display:table;
+    border:2px solid gray;
+    height:300px;
+    width: 100%;
+}
+
+.child {
+    display:table-cell;
+    vertical-align:middle;
+    text-align:center;
+}
+
+.child img {
+    border:2px solid red;
+    width:200px;
+}
+
+
+/* footer */
+
+footer {
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid $grayMediumLight;
+  color: $grayLight;
+  a {
+    color: $gray;
+    &:hover {
+      color: $grayDarker;
+    }
+  }
+  small {
+    float: left;
+  }
+  ul {
+    float: right;
+    list-style: none;
+    li {
+      float: left;
+      margin-left: 10px;
+    }
+  }
+}
+
+/* miscellaneous */
+
+.NoUnderlineForLink {
+  text-decoration: none !important; 
+}
+
+#whiteText{
+  color: #fff !important; 
+}
+
+.spacefortopofpage{
+  margin-bottom: 100px;
+}
+.spacefortopoflandingpage{
+  margin-top: 70px;
+}
+
+.hidden { display: none; }
+
+.debug_dump {
+  clear: both;
+  float: left;
+  width: 100%;
+  margin-top: 45px;
+  @include box_sizing;
+}
+.centerpicture{
+  display: block; margin: 0 auto;
 }
