--- a/app/views/blogposts/openingPost.html.erb
+++ b/app/views/blogposts/openingPost.html.erb
@@ -13,7 +13,7 @@
 <!--Put picture for post here -->
 <br>
 <div class="row">
-  <a href="" title="Adviceshare blog" alt="Grad School-Internships-Full Time Jobs-Life Skills"><img class="blogpostimage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Landing+Professional+and+Academic+Positions.jpg" /></a>
+  <a href="" title="Adviceshare blog" alt="Grad School-Internships-Full Time Jobs-Life Skills"><img class="blogpostimage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Landing%2BProfessional%2Band%2BAcademic%2BPositions.jpg" /></a>
 </div>
 
 <!--Put Blog post title here-->
@@ -47,7 +47,7 @@
   <div class="span4">
     <div class="clearfix content-heading" style="margin-left: 40px;">  
           <div class="clearfix content-heading explainergraphicsAuthor">  
-          <img class="pull-left explainergraphicsAuthor" src="https://s3.amazonaws.com/AdviceShare/AdviceShare+Logos/AdviceShare+favicon.png"/>
+          <img class="pull-left explainergraphicsAuthor" src="https://s3.amazonaws.com/AdviceShare/AS_Favicons/AS_Favicon.png"/>
           <h4 class="text-left blogAuthorName" style="margin-left: 50px;">
             <a class="" href="http://www.AdviceShare.co/blog/highly-coveted-professional-and-academic-positions#author">by The AdviceShare team</a> 
           </h4>
@@ -82,7 +82,7 @@
     <br><br>
     We want to share our strategies, mistakes and challenges of successfully securing various professional and academic opportunities. We'll be curating posts from our team at <a class="NoUnderlineForAuthorLinks" href="http://www.adviceshare.co" target="_blank">AdviceShare</a> and fellow bloggers.
     <br><br>
-    Here's a quick overview of what we'll be writing about in our series. If you want to be notified when a post goes live just sign up below!<h5>
+    Here's a quick overview of the types of things that we'll be writing about in our series. If you want to be notified when a post goes live just sign up below!<h5>
     <br>
 
        <h4 class="tab">Grad School</h4>
@@ -118,6 +118,7 @@
       <h4 class="tab">Life Skills</h4>
 
       <ul class="extraTab">
+        <li class="blogPostText">Life Hacks to stay productive during the holiday season.</li>
         <li class="blogPostText">The Art & Science of Networking.</li>
         <li class="blogPostText">4 Interview Techniques that May Surprise You.</li>
         <li class="blogPostText">Getting a Letter of Recommendation from Someone Who Doesn't Remember You.</li>
@@ -156,7 +157,7 @@
   <div class="span8" id="author">
     <div class="clearfix content-heading">  
           <div class="clearfix content-heading explainergraphics">  
-          <img class="pull-left pushpicturedown withrightmargin" src="https://s3.amazonaws.com/AdviceShare/AdviceShare+Logos/AdviceShare+favicon.png"/>
+          <img class="pull-left pushpicturedown withrightmargin" src="https://s3.amazonaws.com/AdviceShare/AS_Favicons/AS_Favicon.png"/>
           <h4 class="text-left blogPostText" style="margin-left: 40px;">
             <b style="line-height: 130%;">About the author</b>
           <h4 class="text-left blogPostText" style="margin-left: 40px;">
@@ -165,6 +166,7 @@
           <h4 class="text-left blogPostText" style="margin-left: 40px;">
             All posts are curated by Malcolm Evans, Founder of AdviceShare (an easier way to give and receive advice). <a class="NoUnderlineForAuthorLinks" href="mailto:malcolm@AdviceShare.co" target="_blank">Reach out to him</a> or <a class="NoUnderlineForAuthorLinks" href="http://www.Twitter.com/malcolm_evans" target="_blank">follow him on Twitter</a>. 
           </h4>
+          <br>
         </div>
   
     </div>
