--- a/app/views/blogsignups/_postsToDate.html.erb
+++ b/app/views/blogsignups/_postsToDate.html.erb
@@ -1,6 +1,32 @@
-<br>
-<br>
 <div class="row">
+  <div class="span2">
+  </div>
+  <div class="span8">
+     <hr>
+  </div>
+  <div class="span2">
+  </div>
+</div>  
+<br>
+<br>
+
+
+<div class="row">
+  
+  <div class="span4">
+  </div>
+
+  <div class="span4">
+    <a href="http://AdviceShare.co/blog/"><img class="blogPostImagesToDate" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Landing%2BProfessional%2Band%2BAcademic%2BPositions.jpg" /></a>
+    <h4 class="text-center"><%= link_to "How we landed the following professional and academic opportunities", "http://www.AdviceShare.co/blog/advice-to-land-highly-coveted-professional-and-academic-opportunities", class: 'NoUnderlineForLink, olderBlogPosts' %></h4>
+  </div>
+
+  <div class="span4">
+  </div>
+
+</div>
+
+<!--<div class="row">
   <div class="span2">
   </div>
   <div class="span8">
@@ -48,9 +74,9 @@
   </div>
   <div class="span2">
   </div>
-</div>
+</div>-->
 
-<!--second row -->
+<!--second row
 <div class="row">
   <div class="span2">
   </div>
@@ -70,7 +96,7 @@
   </div>
 </div>
 
-<!--third row -->
+<!--third row 
 <div class="row">
   <div class="span2">
   </div>
@@ -88,4 +114,5 @@
   </div>
   <div class="span2">
   </div>
-</div>
+</div>-->
+
