--- a/app/views/layouts/noheader_nofooter.html.erb
+++ b/app/views/layouts/noheader_nofooter.html.erb
@@ -19,9 +19,9 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 
 <meta property="og:title" content="AdviceShare" />
 <meta property="og:url" content="www.AdviceShare.co" />
-<meta property="og:description" content="AdviceShare makes it easier for people seeking professional and academic advice to connect with those who want to help, and vice versa." />
+<meta property="og:description" content="AdviceShare is like match.com for Advice. We make it easier for people seeking an edge to connect with those who want to help, and vice versa." />
 <meta property="og:image" content="https://s3.amazonaws.com/AdviceShare/AdviceShare+favicon_smaller+size.png" />
-
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
 <!--Meta TAGS-->
     <meta name="description" content="AdviceShare is like match.com for Advice. We make it easier for people seeking an edge to connect with those who want to help, and vice versa.">
