--- a/app/views/blogposts/index.html.erb
+++ b/app/views/blogposts/index.html.erb
@@ -34,7 +34,7 @@
           <div class="clearfix content-heading explainergraphicsAuthor">  
           <img class="pull-left explainergraphicsAuthor" src="https://s3.amazonaws.com/AdviceShare/AS_Favicons/AS_Favicon.png"/>
           <h4 class="text-left blogAuthorName" style="margin-left: 50px;">
-            <a class="" href="">by The AdviceShare team</a> 
+            <a class="NoUnderlineForLink" href="">by The AdviceShare team</a> 
           </h4>
         </div>
   
